--- a/src/components/about/About.css
+++ b/src/components/about/About.css
@@ -5,10 +5,12 @@
     padding-right: 8%;
     width: 100%;
     color: var(--colorf);
-    
+
 }
 
-
+.wholeabout h5{
+    font-size: 1.4rem;
+}
 
 @media screen and (max-width: 1024px) {
     .bongt{
