--- a/src/components/proj/Proj.css
+++ b/src/components/proj/Proj.css
@@ -1,4 +1,5 @@
 .btnprog{
+  padding: 0.3rem;
     color: var(--colorprimary);
     cursor: pointer;
     width: 5rem;
@@ -11,9 +12,15 @@
   .btnprow{
     color: darkslategray;
     width: 13.4rem;
-    height: 2rem;
+    height: 1.85rem;
     border: 1px solid darkorange;
     border-radius: 5px;
+  }
+
+  .btnprow:hover{
+    background: orangered;
+    color: var(--colorw);
+    border-color: transparent;
   }
   
   .btnprog:hover{
@@ -23,6 +30,7 @@
   }
   
   .btnproy{
+    padding: 0.3rem;
     color: var(--colorprimary);
     cursor: pointer;
     width: 10rem;
@@ -178,7 +186,14 @@
   
   
   @media screen and (max-width: 775px){
+    .btnprog{
+      padding: 0.1rem;
+    }
+    .btnproy{
+      padding: 0.1rem;
+    }
     .btnprow{
+      padding: 0.1rem;
       height: 2vh;
       width: 7.5rem;
     }
